# jsonQ

./: .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  GITHUB_ACTIONS_SETUP.md  IMPROVEMENTS.md  README.md  STATUS_REPORT.md  TEST_COVERAGE_REPORT.md  performance_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: all.yaml  build-and-publish.yaml  comprehensive-ci.yaml  linux-test.yaml  mac-test.yaml  nightly-builds.yaml  release-and-publish.yaml  release.yaml  test-release-setup.yaml  test-runner.yaml  test.yaml  update-badges.yaml  windows-test.yaml
examples/: showcase.py
sampledata/: data.py
src/: .gitignore  __init__.py  jquery.py
src/jsonQ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_advanced_features.py  test_coverage_analysis.py  test_edge_cases.py  test_import_compatibility.py  test_jquery.py  test_new_features.py
