[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "jsonQ"
version = "0.0.7"
authors = [
  { name="Sriram Manikanth", email="msriram0803@gmail.com" },
]
description = "Query your json data in python like no-sql"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Srirammkm/jsonQ"
"Bug Tracker" = "https://github.com/Srirammkm/jsonQ/issues"