[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonQ"
version = "3.0.3"
authors = [
  { name="Sriram Manikanth", email="msriram0803@gmail.com" },
]
description = "A powerful Python library for querying JSON data with jQuery-like syntax"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["json", "query", "data", "filter", "search", "nosql", "database"]

[project.urls]
"Homepage" = "https://github.com/Srirammkm/jsonQ"
"Bug Tracker" = "https://github.com/Srirammkm/jsonQ/issues"
"Documentation" = "https://github.com/Srirammkm/jsonQ#readme"
"Source Code" = "https://github.com/Srirammkm/jsonQ"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
